Fixed Discussion title alignment

--- a/app/client/stylesheets/__chat.scss
+++ b/app/client/stylesheets/__chat.scss
@@ -9,6 +9,10 @@
 
   &-heading {
     min-height: 55px;
+
+    .card-title {
+      max-width: 100%;
+    }
   }
 
   &-message-container:last-of-type {
